@@ -1,10 +1,8 @@
 package fr.insee.vtl.model;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * The <code>ListExpression</code> class is an abstract representation of an expression of type <code>List</code>.
@@ -23,7 +21,7 @@ public abstract class ListExpression extends ResolvableExpression implements Typ
      * @return A new list expression resolving to a list with the elements and type provided.
      */
     public static <T> ListExpression withContainedType(Collection<Object> elements, Class<T> containedType, Positioned position) {
-        List<Object> list = Collections.unmodifiableList(elements.stream().collect(Collectors.toList()));
+        List<Object> list = List.copyOf(elements);
         return new ListExpression(position) {
             @Override
             public List<?> resolve(Map<String, Object> context) {
